add: create tracks fix: update track in moonshine
